@@ -476,6 +476,12 @@
 
 2010-10-14	The InnoDB Team
 
+	* dict/dict0dict.c, handler/handler0alter.cc, include/dict0dict.h
+	row/row0merge.c:
+	Fix Bug #55084 Innodb crash and corruption after alter table
+
+2010-11-10	The InnoDB Team
+
 	* srv/srv0start.c:
 	Display the zlib version number at startup.
 	InnoDB compressed tables use zlib, and the implementation depends
